Try to fix busybox rm problems

--- a/openwrt/Dockerfile
+++ b/openwrt/Dockerfile
@@ -8,7 +8,7 @@ MAINTAINER Kyle Anderson <kyle@xkyle.com>
 RUN wget http://downloads.openwrt.org/attitude_adjustment/12.09/x86/generic/openwrt-x86-generic-rootfs.tar.gz
 RUN gunzip openwrt-x86-generic-rootfs.tar.gz
 RUN rm -rf var
-RUN tar -x --exclude=./etc/resolv.conf --exclude=./etc/hosts -f openwrt-x86-generic-rootfs.tar
+RUN /bin/busybox tar -x --exclude=./etc/resolv.conf --exclude=./etc/hosts -f openwrt-x86-generic-rootfs.tar
 RUN rm openwrt-x86-generic-rootfs.tar
 
 RUN uci delete network.lan.type
