Fix inittab to get a real console

--- a/openwrt/Dockerfile
+++ b/openwrt/Dockerfile
@@ -20,6 +20,7 @@ RUN ["/busybox-x86_64", "rm", "openwrt-x86-generic-rootfs.tar"]
 # Convert the default networking in openwrt to be static for the one interface
 ADD network /etc/config/network
 ADD system /etc/config/system
+ADD inittab /etc/inittab
 
 # These end up setting kernel things we can't really set in docker
 RUN ["/busybox-x86_64", "rm", "/etc/rc.d/S45firewall"]
